added path --add-modules javafx.base,javafx.graphics works now