@@ -6,6 +6,8 @@ import javafx.scene.control.Button;
 import javafx.scene.layout.Pane;
 import javafx.stage.Stage;
 
+import java.util.Random;
+
 public class Task extends Application {
     public final int WIDTH = 950;
     public final int HEIGHT = 800;
@@ -28,23 +30,26 @@ public class Task extends Application {
     }
 
     private void uiSetUp(Pane root, Pane fractalPane) {
-        //todo: додав кнопку і все заглохло(((
+        //todo: додав кнопку і змінив шлях
+        //  --module-path c:\javafx-sdk-12.0.1\lib\ --add-modules javafx.controls,javafx.fxml --add-modules javafx.base,javafx.graphics
         Button button = new Button("Regenerate");
-//        button.setTranslateX(25);
-//        button.setTranslateY(25);
-//        drawFractal.setOnAction((event) -> {
-//            fractalPane.getChildren().clear();
-//            draw(fractalPane);
-//        });
+        button.setTranslateX(25);
+        button.setTranslateY(25);
+        button.setOnAction((event) -> {
+            fractalPane.getChildren().clear();
+            draw(fractalPane);
+        });
         root.getChildren().add(button);
 
     }
 
     private void draw(Pane fractalPane) {
-        Fractal fractalTriangle = new Fractal();
-//        Fractal test = new Fractal(new Point(300,300), new Point(680,275), new Point(595,675), 9, 0.22f);
-        fractalTriangle.draw(fractalPane);
-//        test.draw(fractalPane);
+        Random offset = new Random();
+        float shift = offset.nextFloat();
+//        Fractal fractalTriangle = new Fractal();
+        Fractal test = new Fractal(new Point(300,300), new Point(680,275), new Point(595,675), 9, shift);
+//        fractalTriangle.draw(fractalPane);
+        test.draw(fractalPane);
     }
 
     private void windowsSetUp(Stage stage) {
